[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/3D/Blockhead/Material.material" type="Material" id=1]
[ext_resource path="res://Assets/3D/Barn/Brown.material" type="Material" id=2]
[ext_resource path="res://good to know/compile_shader_fix.gd" type="Script" id=3]
[ext_resource path="res://Assets/3D/Barn/Green.material" type="Material" id=4]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="SpatialMaterial" id=2]
emission_enabled = true
emission = Color( 0.93, 0.9, 0.89, 1 )
emission_energy = 2.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="ParticlesMaterial" id=3]
direction = Vector3( 0, 0, 1 )
spread = 15.0
initial_velocity = 25.0
initial_velocity_random = 0.5
scale_random = 0.1

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.5, 0.5, 0.5 )

[node name="compile_shader_fix" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.448353 )
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": "Position the block in front of the camera
"
}
materials = [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ) ]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="3D" type="Spatial" parent="."]

[node name="shader_fix_base" type="MeshInstance" parent="3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0201794, 0.025386 )
mesh = SubResource( 1 )
material/0 = null

[node name="particles_fix_base" type="Particles" parent="3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.044912, -0.0287944, -0.0254231 )
material_override = SubResource( 2 )
emitting = false
amount = 1
lifetime = 0.1
one_shot = true
explosiveness = 1.0
visibility_aabb = AABB( 0, 0, 0, 0.1, 0.1, 0.1 )
local_coords = false
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 4 )

[node name="2D" type="Node2D" parent="."]

[node name="canvas_fix_base" type="ColorRect" parent="2D"]
margin_right = 21.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
